# sa2-gardening-tools

./: .gitignore  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
src/: App.tsx  MainContent.tsx  PauseMenu.tsx  input.css  store.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  crypto.rs  lib.rs  logic.rs  main.rs  old.rs  state.rs
src-tauri/src/model/: save.rs  save_pack.rs  types.rs
src-tauri/src/util/: diff.rs  file.rs  serde_bitflags.rs  serde_try_from.rs  try_from_bitflags.rs  try_from_enum.rs  walker.rs
src/backend/: index.ts
src/components/: Bitflags.tsx  Button.tsx  Chao.tsx  ChaoCell.tsx  ChaoContext.tsx  ChaoSave.tsx  Dropzone.tsx  ErrorModal.tsx  TabButton.tsx  TauriDropzone.tsx  icons.tsx  inputs.tsx
src/components/chao/: Chao.tsx  ChaoAppearance.tsx  ChaoBasics.tsx  ChaoBitflags.tsx  ChaoBonds.tsx  ChaoCell.tsx  ChaoCheckbox.tsx  ChaoContext.tsx  ChaoEmotions.tsx  ChaoEnum.tsx  ChaoEvolution.tsx  ChaoHealth.tsx  ChaoItems.tsx  ChaoName.tsx  ChaoPersonality.tsx  ChaoSave.tsx  ChaoSliderInput.tsx  ChaoStats.tsx
src/components/chao/context/: ChaoBitflagContext.tsx  ChaoContext.tsx  ChaoEnumContext.tsx
src/components/context/: BitflagContext.tsx
src/components/ui/: buttons.tsx  icons.tsx  inputs.tsx  layout.tsx
src/components/util/: Dropzone.tsx  TauriDropzone.tsx
src/tauri/: backend.ts  drag_drop.ts  event.ts
src/util/: object_path.ts  string_util.ts  tauri.ts
src/util/chao/: name.ts
