[package]
name = "sa2b-gardening-tools"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
sieve = { path = "../../sieve/sieve" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
quick-xml = { version = "0.30.0", features = ["serialize"] }
strum = "0.25"
strum_macros = "0.25"
paste = "1.0.14"
bitflags = "2.4.1"
bimap = "0.6.3"
lazy_static = "1.4.0"
byteorder = "1.5.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
