[package]
name = "sa2-gardening-tools"
version = "0.1.0"
authors = ["Matthew Brown"]
edition = "2021"
rust-version = "1.60"
description = "A Tauri app"
readme = "README.md"
homepage = "https://github.com/mattadatta/sa2-gardening-tools"
repository = "https://github.com/mattadatta/sa2-gardening-tools"
license-file = "LICENSE"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "fs-write-file", "dialog-all", "shell-open"] }
ts-rs = "7.0"
cursieve = { path = "../../cursieve/cursieve" }
byteorder = "1.5.0"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
strum = "0.25"
strum_macros = "0.25"
paste = "1.0.14"
bitflags = "2.4.1"
bimap = "0.6.3"
lazy_static = "1.4.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
